Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -972,6 +972,7 @@
 185.8.126.198 xmlrpc;
 185.82.177.99 xmlrpc;
 185.9.78.51 xmlrpc;
+185.95.106.204 xmlrpc;
 188.0.169.118 xmlrpc;
 188.0.169.7 xmlrpc;
 188.0.189.219 xmlrpc;
@@ -1200,6 +1201,7 @@
 202.57.209.50 xmlrpc;
 202.57.209.55 xmlrpc;
 202.57.209.6 xmlrpc;
+202.57.209.60 xmlrpc;
 202.57.209.61 xmlrpc;
 202.70.133.94 xmlrpc;
 203.198.94.47 xmlrpc;
