--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2194,6 +2194,7 @@
 92.53.96.179 xmlrpc;
 92.53.96.221 xmlrpc;
 92.53.96.223 xmlrpc;
+92.53.99.196 xmlrpc;
 92.62.59.27 xmlrpc;
 93.100.175.23 xmlrpc;
 93.100.73.27 xmlrpc;
