--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1229,6 +1229,7 @@
 212.3.150.170 xmlrpc;
 212.32.208.216 xmlrpc;
 212.32.208.218 xmlrpc;
+212.34.120.88 xmlrpc;
 212.35.165.138 xmlrpc;
 212.35.174.56 xmlrpc;
 212.35.182.243 xmlrpc;
