--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -770,6 +770,7 @@
 178.68.51.136 xmlrpc;
 178.70.169.42 xmlrpc;
 178.71.94.219 xmlrpc;
+18.138.215.224 xmlrpc;
 18.141.48.244 xmlrpc;
 180.138.194.161 xmlrpc;
 180.138.195.108 xmlrpc;
