--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1750,6 +1750,7 @@
 49.235.65.73 xmlrpc;
 49.235.74.169 xmlrpc;
 5.101.156.211 xmlrpc;
+5.101.156.90 xmlrpc;
 5.101.157.166 xmlrpc;
 5.101.157.81 xmlrpc;
 5.101.157.98 xmlrpc;
