--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -289,6 +289,7 @@
 123.13.56.213 xmlrpc;
 123.13.57.12 xmlrpc;
 123.13.57.136 xmlrpc;
+123.13.57.162 xmlrpc;
 123.13.57.170 xmlrpc;
 123.13.57.197 xmlrpc;
 123.13.57.21 xmlrpc;
