Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2051,6 +2051,7 @@
 87.250.224.4 xmlrpc;
 87.250.224.5 xmlrpc;
 87.250.224.7 xmlrpc;
+87.250.224.8 xmlrpc;
 87.255.10.63 xmlrpc;
 87.255.16.162 xmlrpc;
 88.135.80.28 xmlrpc;
