--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -312,6 +312,7 @@
 123.13.60.95 xmlrpc;
 123.13.61.156 xmlrpc;
 123.13.61.231 xmlrpc;
+123.13.61.233 xmlrpc;
 123.13.61.66 xmlrpc;
 123.13.62.160 xmlrpc;
 123.13.62.230 xmlrpc;
