--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1828,6 +1828,7 @@
 5.255.231.39 xmlrpc;
 5.255.231.43 xmlrpc;
 5.255.231.76 xmlrpc;
+5.255.231.78 xmlrpc;
 5.255.231.87 xmlrpc;
 5.255.231.89 xmlrpc;
 5.255.231.95 xmlrpc;
