Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -250,6 +250,7 @@
 120.24.108.217 xmlrpc;
 120.24.109.199 xmlrpc;
 120.24.225.212 xmlrpc;
+120.25.2.184 xmlrpc;
 120.48.112.141 xmlrpc;
 120.55.165.45 xmlrpc;
 120.55.39.37 xmlrpc;
