--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2200,6 +2200,7 @@
 93.187.181.83 xmlrpc;
 93.80.47.155 xmlrpc;
 93.90.228.118 xmlrpc;
+93.92.200.170 xmlrpc;
 93.92.200.175 xmlrpc;
 93.92.200.186 xmlrpc;
 94.102.127.136 xmlrpc;
