--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2286,6 +2286,7 @@
 95.179.121.215 xmlrpc;
 95.179.124.242 xmlrpc;
 95.179.125.212 xmlrpc;
+95.179.62.34 xmlrpc;
 95.181.137.42 xmlrpc;
 95.181.210.20 xmlrpc;
 95.182.126.116 xmlrpc;
