--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1779,6 +1779,7 @@
 5.167.144.142 xmlrpc;
 5.167.144.234 xmlrpc;
 5.18.176.219 xmlrpc;
+5.18.181.20 xmlrpc;
 5.18.202.186 xmlrpc;
 5.18.236.43 xmlrpc;
 5.18.252.244 xmlrpc;
@@ -2354,6 +2355,7 @@
 95.37.58.155 xmlrpc;
 95.52.132.196 xmlrpc;
 95.54.207.203 xmlrpc;
+95.54.231.123 xmlrpc;
 95.54.231.96 xmlrpc;
 95.55.58.181 xmlrpc;
 95.55.69.131 xmlrpc;
