Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1845,6 +1845,7 @@
 5.42.66.6 xmlrpc;
 5.45.80.13 xmlrpc;
 5.59.135.126 xmlrpc;
+5.59.140.238 xmlrpc;
 5.59.222.41 xmlrpc;
 5.59.222.51 xmlrpc;
 5.59.246.29 xmlrpc;
@@ -1909,6 +1910,7 @@
 77.75.8.55 xmlrpc;
 78.106.129.211 xmlrpc;
 78.106.143.17 xmlrpc;
+78.132.156.23 xmlrpc;
 78.139.210.26 xmlrpc;
 78.142.235.4 xmlrpc;
 78.156.235.199 xmlrpc;
