--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -481,6 +481,7 @@
 146.19.59.2 xmlrpc;
 146.190.103.193 xmlrpc;
 146.190.109.147 xmlrpc;
+146.190.111.80 xmlrpc;
 146.190.90.35 xmlrpc;
 146.190.97.43 xmlrpc;
 146.56.198.139 xmlrpc;
@@ -1383,6 +1384,7 @@
 31.148.174.77 xmlrpc;
 31.148.35.9 xmlrpc;
 31.148.4.67 xmlrpc;
+31.162.170.254 xmlrpc;
 31.171.198.139 xmlrpc;
 31.171.198.206 xmlrpc;
 31.177.78.178 xmlrpc;
@@ -1764,6 +1766,7 @@
 5.140.97.78 xmlrpc;
 5.142.152.106 xmlrpc;
 5.144.119.92 xmlrpc;
+5.145.253.114 xmlrpc;
 5.145.254.43 xmlrpc;
 5.149.156.173 xmlrpc;
 5.149.156.184 xmlrpc;
