--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1910,6 +1910,7 @@
 77.40.2.201 xmlrpc;
 77.40.3.234 xmlrpc;
 77.43.246.75 xmlrpc;
+77.50.102.168 xmlrpc;
 77.51.80.75 xmlrpc;
 77.75.8.55 xmlrpc;
 78.106.129.211 xmlrpc;
