--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -959,6 +959,7 @@
 185.54.179.229 xmlrpc;
 185.54.20.4 xmlrpc;
 185.59.246.172 xmlrpc;
+185.59.246.232 xmlrpc;
 185.61.218.17 xmlrpc;
 185.61.221.85 xmlrpc;
 185.61.222.253 xmlrpc;
@@ -976,6 +977,7 @@
 188.0.189.219 xmlrpc;
 188.119.116.139 xmlrpc;
 188.123.230.30 xmlrpc;
+188.124.242.23 xmlrpc;
 188.128.32.78 xmlrpc;
 188.130.129.129 xmlrpc;
 188.130.136.219 xmlrpc;
