Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1630,6 +1630,7 @@
 46.151.151.94 xmlrpc;
 46.158.167.75 xmlrpc;
 46.158.64.10 xmlrpc;
+46.160.235.156 xmlrpc;
 46.161.60.233 xmlrpc;
 46.161.63.97 xmlrpc;
 46.164.216.192 xmlrpc;
@@ -2208,6 +2209,7 @@
 92.62.59.27 xmlrpc;
 93.100.165.67 xmlrpc;
 93.100.175.23 xmlrpc;
+93.100.31.98 xmlrpc;
 93.100.73.27 xmlrpc;
 93.120.167.26 xmlrpc;
 93.123.204.81 xmlrpc;
