--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -124,6 +124,7 @@
 109.248.205.143 xmlrpc;
 109.248.252.154 xmlrpc;
 109.248.55.164 xmlrpc;
+109.252.0.50 xmlrpc;
 109.252.11.72 xmlrpc;
 109.252.149.202 xmlrpc;
 109.252.2.88 xmlrpc;
@@ -1021,6 +1022,7 @@
 188.225.23.170 xmlrpc;
 188.225.40.140 xmlrpc;
 188.225.49.120 xmlrpc;
+188.225.50.217 xmlrpc;
 188.227.83.130 xmlrpc;
 188.232.26.21 xmlrpc;
 188.232.8.156 xmlrpc;
