--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -308,6 +308,7 @@
 123.13.59.21 xmlrpc;
 123.13.59.241 xmlrpc;
 123.13.59.96 xmlrpc;
+123.13.60.140 xmlrpc;
 123.13.60.151 xmlrpc;
 123.13.60.173 xmlrpc;
 123.13.60.63 xmlrpc;
