Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1681,6 +1681,7 @@
 46.39.56.134 xmlrpc;
 46.39.57.187 xmlrpc;
 46.61.102.102 xmlrpc;
+46.61.242.58 xmlrpc;
 46.63.148.13 xmlrpc;
 46.72.166.172 xmlrpc;
 46.8.11.183 xmlrpc;
