--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -900,6 +900,7 @@
 185.20.45.49 xmlrpc;
 185.200.117.131 xmlrpc;
 185.200.240.65 xmlrpc;
+185.201.30.4 xmlrpc;
 185.201.88.248 xmlrpc;
 185.205.238.239 xmlrpc;
 185.215.60.57 xmlrpc;
