--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2019,6 +2019,7 @@
 81.69.170.51 xmlrpc;
 81.69.176.253 xmlrpc;
 81.69.199.60 xmlrpc;
+81.89.127.100 xmlrpc;
 81.9.126.137 xmlrpc;
 82.140.227.255 xmlrpc;
 82.142.132.76 xmlrpc;
@@ -2302,6 +2303,7 @@
 95.108.213.129 xmlrpc;
 95.108.213.143 xmlrpc;
 95.108.213.158 xmlrpc;
+95.108.213.167 xmlrpc;
 95.108.213.171 xmlrpc;
 95.108.213.173 xmlrpc;
 95.108.213.180 xmlrpc;
