--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1251,6 +1251,7 @@
 212.46.10.6 xmlrpc;
 212.7.225.92 xmlrpc;
 212.7.229.227 xmlrpc;
+212.7.251.250 xmlrpc;
 212.94.25.195 xmlrpc;
 213.138.91.164 xmlrpc;
 213.149.6.113 xmlrpc;
@@ -1866,6 +1867,7 @@
 5.42.213.178 xmlrpc;
 5.42.64.62 xmlrpc;
 5.42.66.6 xmlrpc;
+5.43.240.47 xmlrpc;
 5.45.80.13 xmlrpc;
 5.59.133.30 xmlrpc;
 5.59.135.126 xmlrpc;
