--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1842,6 +1842,7 @@
 5.255.231.109 xmlrpc;
 5.255.231.122 xmlrpc;
 5.255.231.142 xmlrpc;
+5.255.231.144 xmlrpc;
 5.255.231.145 xmlrpc;
 5.255.231.148 xmlrpc;
 5.255.231.161 xmlrpc;
