--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -480,6 +480,7 @@
 146.158.125.107 xmlrpc;
 146.185.200.217 xmlrpc;
 146.19.59.2 xmlrpc;
+146.19.78.12 xmlrpc;
 146.190.103.193 xmlrpc;
 146.190.109.147 xmlrpc;
 146.190.111.80 xmlrpc;
