Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1346,6 +1346,7 @@
 2a03:6f00:1::5c35:606a xmlrpc;
 2a03:6f00:1::5c35:6072 xmlrpc;
 2a03:6f00:1::5c35:6083 xmlrpc;
+2a03:6f00:1::5c35:6093 xmlrpc;
 2a03:6f00:1::5c35:6096 xmlrpc;
 2a03:6f00:1::5c35:60ad xmlrpc;
 2a03:6f00:1::5c35:60ae xmlrpc;
@@ -2184,6 +2185,7 @@
 92.53.96.114 xmlrpc;
 92.53.96.131 xmlrpc;
 92.53.96.142 xmlrpc;
+92.53.96.147 xmlrpc;
 92.53.96.150 xmlrpc;
 92.53.96.173 xmlrpc;
 92.53.96.174 xmlrpc;
