--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -123,6 +123,7 @@
 109.248.167.64 xmlrpc;
 109.248.205.143 xmlrpc;
 109.248.252.154 xmlrpc;
+109.248.49.217 xmlrpc;
 109.248.55.164 xmlrpc;
 109.252.0.50 xmlrpc;
 109.252.11.72 xmlrpc;
@@ -977,6 +978,7 @@
 188.119.116.139 xmlrpc;
 188.123.230.30 xmlrpc;
 188.124.242.23 xmlrpc;
+188.130.128.161 xmlrpc;
 188.130.129.129 xmlrpc;
 188.130.136.219 xmlrpc;
 188.130.136.91 xmlrpc;
@@ -990,6 +992,7 @@
 188.130.218.240 xmlrpc;
 188.130.218.249 xmlrpc;
 188.130.220.11 xmlrpc;
+188.130.221.179 xmlrpc;
 188.130.221.180 xmlrpc;
 188.130.239.14 xmlrpc;
 188.134.74.150 xmlrpc;
@@ -1587,6 +1590,7 @@
 45.77.251.159 xmlrpc;
 45.77.253.118 xmlrpc;
 45.78.22.95 xmlrpc;
+45.81.136.33 xmlrpc;
 45.83.119.14 xmlrpc;
 45.83.94.4 xmlrpc;
 45.84.176.120 xmlrpc;
@@ -1665,12 +1669,14 @@
 46.63.148.13 xmlrpc;
 46.72.166.172 xmlrpc;
 46.8.11.183 xmlrpc;
+46.8.110.32 xmlrpc;
 46.8.15.233 xmlrpc;
 46.8.155.38 xmlrpc;
 46.8.16.220 xmlrpc;
 46.8.17.155 xmlrpc;
 46.8.22.153 xmlrpc;
 46.8.22.184 xmlrpc;
+46.8.22.96 xmlrpc;
 46.8.222.131 xmlrpc;
 46.8.223.80 xmlrpc;
 46.8.245.134 xmlrpc;
@@ -2222,6 +2228,7 @@
 94.140.246.55 xmlrpc;
 94.141.125.234 xmlrpc;
 94.142.248.83 xmlrpc;
+94.158.190.37 xmlrpc;
 94.158.190.83 xmlrpc;
 94.181.160.57 xmlrpc;
 94.19.164.97 xmlrpc;
