--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1813,6 +1813,7 @@
 5.228.82.199 xmlrpc;
 5.228.82.95 xmlrpc;
 5.23.50.132 xmlrpc;
+5.23.50.26 xmlrpc;
 5.23.51.195 xmlrpc;
 5.252.29.87 xmlrpc;
 5.252.30.31 xmlrpc;
