--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1177,6 +1177,7 @@
 2001:19f0:4400:2b95:5400:4ff:feb1:a059 xmlrpc;
 2001:19f0:4401:dcf:5400:4ff:feb4:f07f xmlrpc;
 2001:1bb0:e000:1e::112 xmlrpc;
+202.131.65.110 xmlrpc;
 202.14.4.134 xmlrpc;
 202.57.209.14 xmlrpc;
 202.57.209.147 xmlrpc;
