--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1102,6 +1102,7 @@
 193.93.194.254 xmlrpc;
 193.93.194.39 xmlrpc;
 194.104.11.84 xmlrpc;
+194.146.240.144 xmlrpc;
 194.15.115.212 xmlrpc;
 194.190.1.194 xmlrpc;
 194.195.90.110 xmlrpc;
