Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -745,6 +745,7 @@
 178.218.27.44 xmlrpc;
 178.218.29.203 xmlrpc;
 178.218.99.11 xmlrpc;
+178.219.45.88 xmlrpc;
 178.234.109.64 xmlrpc;
 178.234.220.8 xmlrpc;
 178.234.75.227 xmlrpc;
