--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1956,6 +1956,7 @@
 8.140.29.143 xmlrpc;
 8.142.111.3 xmlrpc;
 8.142.12.12 xmlrpc;
+8.210.120.135 xmlrpc;
 8.210.250.210 xmlrpc;
 8.214.83.144 xmlrpc;
 8.217.40.137 xmlrpc;
