--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1278,6 +1278,7 @@
 213.180.203.69 xmlrpc;
 213.180.203.7 xmlrpc;
 213.180.203.70 xmlrpc;
+213.180.203.78 xmlrpc;
 213.180.203.93 xmlrpc;
 213.193.10.78 xmlrpc;
 213.222.226.64 xmlrpc;
