--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -170,6 +170,7 @@
 112.74.100.106 xmlrpc;
 112.74.77.185 xmlrpc;
 112.81.63.83 xmlrpc;
+112.86.53.94 xmlrpc;
 112.92.74.9 xmlrpc;
 113.108.220.146 xmlrpc;
 113.119.64.51 xmlrpc;
