--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -815,6 +815,7 @@
 182.92.152.95 xmlrpc;
 182.92.201.189 xmlrpc;
 182.92.96.21 xmlrpc;
+183.178.121.82 xmlrpc;
 183.179.238.77 xmlrpc;
 183.56.195.106 xmlrpc;
 183.56.236.152 xmlrpc;
