--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2028,6 +2028,7 @@
 85.140.22.162 xmlrpc;
 85.143.173.5 xmlrpc;
 85.174.197.235 xmlrpc;
+85.174.204.118 xmlrpc;
 85.174.207.184 xmlrpc;
 85.192.189.7 xmlrpc;
 85.239.35.245 xmlrpc;
