--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1120,6 +1120,7 @@
 194.8.85.232 xmlrpc;
 194.85.210.20 xmlrpc;
 194.85.210.41 xmlrpc;
+194.85.210.81 xmlrpc;
 195.161.41.70 xmlrpc;
 195.19.121.68 xmlrpc;
 195.19.123.225 xmlrpc;
