--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -892,6 +892,7 @@
 185.181.246.244 xmlrpc;
 185.183.79.99 xmlrpc;
 185.188.96.207 xmlrpc;
+185.196.118.225 xmlrpc;
 185.197.33.8 xmlrpc;
 185.20.45.49 xmlrpc;
 185.200.117.131 xmlrpc;
