--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2039,6 +2039,7 @@
 85.95.188.147 xmlrpc;
 85.95.189.123 xmlrpc;
 86.48.10.49 xmlrpc;
+87.117.185.64 xmlrpc;
 87.117.48.186 xmlrpc;
 87.117.48.4 xmlrpc;
 87.117.51.234 xmlrpc;
