--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1836,6 +1836,7 @@
 5.255.231.89 xmlrpc;
 5.255.231.95 xmlrpc;
 5.255.231.96 xmlrpc;
+5.3.77.12 xmlrpc;
 5.42.213.178 xmlrpc;
 5.42.64.62 xmlrpc;
 5.42.66.6 xmlrpc;
