--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -999,6 +999,7 @@
 188.168.155.72 xmlrpc;
 188.17.104.99 xmlrpc;
 188.17.194.32 xmlrpc;
+188.17.210.249 xmlrpc;
 188.17.90.8 xmlrpc;
 188.170.73.31 xmlrpc;
 188.19.147.14 xmlrpc;
