--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1000,6 +1000,7 @@
 188.17.210.249 xmlrpc;
 188.17.90.8 xmlrpc;
 188.170.73.31 xmlrpc;
+188.187.102.13 xmlrpc;
 188.19.147.14 xmlrpc;
 188.19.161.198 xmlrpc;
 188.19.164.163 xmlrpc;
@@ -1273,6 +1274,7 @@
 213.232.122.84 xmlrpc;
 213.232.235.83 xmlrpc;
 213.24.125.21 xmlrpc;
+213.24.125.82 xmlrpc;
 213.24.126.224 xmlrpc;
 213.24.127.137 xmlrpc;
 213.24.133.245 xmlrpc;
