--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2179,6 +2179,7 @@
 92.223.86.15 xmlrpc;
 92.223.86.9 xmlrpc;
 92.252.143.106 xmlrpc;
+92.252.170.223 xmlrpc;
 92.252.182.66 xmlrpc;
 92.253.252.55 xmlrpc;
 92.37.157.121 xmlrpc;
