--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -905,6 +905,7 @@
 185.227.134.106 xmlrpc;
 185.228.135.113 xmlrpc;
 185.228.135.226 xmlrpc;
+185.228.135.50 xmlrpc;
 185.23.66.89 xmlrpc;
 185.233.92.211 xmlrpc;
 185.236.157.117 xmlrpc;
@@ -2177,6 +2178,7 @@
 92.223.86.12 xmlrpc;
 92.223.86.15 xmlrpc;
 92.223.86.9 xmlrpc;
+92.240.221.127 xmlrpc;
 92.252.143.106 xmlrpc;
 92.252.170.223 xmlrpc;
 92.252.182.66 xmlrpc;
