Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1090,6 +1090,7 @@
 193.233.58.57 xmlrpc;
 193.233.88.234 xmlrpc;
 193.24.199.50 xmlrpc;
+193.39.160.97 xmlrpc;
 193.46.77.189 xmlrpc;
 193.93.193.200 xmlrpc;
 193.93.194.176 xmlrpc;
