--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -865,6 +865,7 @@
 185.124.177.115 xmlrpc;
 185.124.178.4 xmlrpc;
 185.125.72.146 xmlrpc;
+185.13.112.142 xmlrpc;
 185.132.196.210 xmlrpc;
 185.135.232.124 xmlrpc;
 185.140.160.139 xmlrpc;
@@ -2161,6 +2162,7 @@
 91.241.255.48 xmlrpc;
 91.243.91.154 xmlrpc;
 91.245.129.155 xmlrpc;
+91.245.129.192 xmlrpc;
 91.245.130.162 xmlrpc;
 91.245.131.65 xmlrpc;
 91.245.134.59 xmlrpc;
@@ -2179,6 +2181,7 @@
 92.223.86.15 xmlrpc;
 92.223.86.9 xmlrpc;
 92.240.221.127 xmlrpc;
+92.248.137.83 xmlrpc;
 92.252.143.106 xmlrpc;
 92.252.170.223 xmlrpc;
 92.252.182.66 xmlrpc;
