Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -602,6 +602,7 @@
 167.71.208.161 xmlrpc;
 168.81.46.223 xmlrpc;
 168.81.46.44 xmlrpc;
+169.150.222.76 xmlrpc;
 170.187.226.128 xmlrpc;
 172.104.168.240 xmlrpc;
 172.104.40.103 xmlrpc;
@@ -953,6 +954,7 @@
 185.50.25.54 xmlrpc;
 185.50.25.58 xmlrpc;
 185.50.25.6 xmlrpc;
+185.53.234.240 xmlrpc;
 185.54.20.4 xmlrpc;
 185.59.246.172 xmlrpc;
 185.59.246.232 xmlrpc;
@@ -1026,6 +1028,7 @@
 188.243.162.38 xmlrpc;
 188.243.182.211 xmlrpc;
 188.243.183.198 xmlrpc;
+188.243.60.186 xmlrpc;
 188.244.237.184 xmlrpc;
 188.246.233.180 xmlrpc;
 188.254.110.161 xmlrpc;
@@ -1649,6 +1652,7 @@
 46.242.11.201 xmlrpc;
 46.242.12.97 xmlrpc;
 46.242.122.6 xmlrpc;
+46.242.14.228 xmlrpc;
 46.242.9.108 xmlrpc;
 46.242.9.51 xmlrpc;
 46.243.232.93 xmlrpc;
@@ -2359,6 +2363,7 @@
 95.26.208.29 xmlrpc;
 95.26.211.188 xmlrpc;
 95.27.126.133 xmlrpc;
+95.27.147.73 xmlrpc;
 95.29.195.237 xmlrpc;
 95.32.218.48 xmlrpc;
 95.32.84.49 xmlrpc;
