--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2089,6 +2089,7 @@
 88.201.168.24 xmlrpc;
 88.201.177.242 xmlrpc;
 88.201.196.51 xmlrpc;
+88.201.206.3 xmlrpc;
 88.80.60.29 xmlrpc;
 89.109.44.193 xmlrpc;
 89.109.48.99 xmlrpc;
