--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -880,6 +880,7 @@
 185.16.106.75 xmlrpc;
 185.16.138.138 xmlrpc;
 185.16.138.156 xmlrpc;
+185.162.33.48 xmlrpc;
 185.165.163.127 xmlrpc;
 185.166.161.123 xmlrpc;
 185.169.100.13 xmlrpc;
