Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1005,6 +1005,7 @@
 188.17.210.249 xmlrpc;
 188.17.90.8 xmlrpc;
 188.170.73.31 xmlrpc;
+188.186.24.57 xmlrpc;
 188.187.102.13 xmlrpc;
 188.19.147.14 xmlrpc;
 188.19.161.198 xmlrpc;
