--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1935,6 +1935,7 @@
 79.139.131.9 xmlrpc;
 79.139.140.4 xmlrpc;
 79.139.151.25 xmlrpc;
+79.139.206.191 xmlrpc;
 79.139.244.244 xmlrpc;
 79.141.208.34 xmlrpc;
 79.141.218.213 xmlrpc;
