Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -970,6 +970,7 @@
 185.72.224.95 xmlrpc;
 185.78.113.254 xmlrpc;
 185.8.126.198 xmlrpc;
+185.80.150.68 xmlrpc;
 185.82.177.99 xmlrpc;
 185.90.102.46 xmlrpc;
 185.95.106.204 xmlrpc;
@@ -2100,6 +2101,7 @@
 88.201.168.164 xmlrpc;
 88.201.168.188 xmlrpc;
 88.201.168.24 xmlrpc;
+88.201.168.50 xmlrpc;
 88.201.177.242 xmlrpc;
 88.201.196.51 xmlrpc;
 88.201.206.3 xmlrpc;
