Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1140,6 +1140,7 @@
 195.19.121.116 xmlrpc;
 195.19.121.68 xmlrpc;
 195.19.123.225 xmlrpc;
+195.19.126.222 xmlrpc;
 195.19.127.192 xmlrpc;
 195.191.175.242 xmlrpc;
 195.2.67.223 xmlrpc;
