--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1636,6 +1636,7 @@
 46.138.179.3 xmlrpc;
 46.138.179.5 xmlrpc;
 46.138.188.134 xmlrpc;
+46.138.42.195 xmlrpc;
 46.138.42.253 xmlrpc;
 46.138.56.227 xmlrpc;
 46.146.205.94 xmlrpc;
@@ -1655,6 +1656,7 @@
 46.175.24.236 xmlrpc;
 46.175.26.246 xmlrpc;
 46.181.139.170 xmlrpc;
+46.187.28.53 xmlrpc;
 46.188.122.172 xmlrpc;
 46.188.122.48 xmlrpc;
 46.191.177.237 xmlrpc;
