--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1796,6 +1796,7 @@
 5.157.32.20 xmlrpc;
 5.157.33.218 xmlrpc;
 5.164.148.83 xmlrpc;
+5.164.8.79 xmlrpc;
 5.165.192.43 xmlrpc;
 5.165.200.36 xmlrpc;
 5.165.202.187 xmlrpc;
