--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1787,6 +1787,7 @@
 5.101.6.56 xmlrpc;
 5.137.226.68 xmlrpc;
 5.138.106.127 xmlrpc;
+5.139.231.179 xmlrpc;
 5.139.231.44 xmlrpc;
 5.140.97.78 xmlrpc;
 5.142.152.106 xmlrpc;
