--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -889,6 +889,7 @@
 185.16.138.156 xmlrpc;
 185.162.33.48 xmlrpc;
 185.165.163.127 xmlrpc;
+185.165.163.32 xmlrpc;
 185.166.161.123 xmlrpc;
 185.169.100.13 xmlrpc;
 185.17.0.83 xmlrpc;
