--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -877,6 +877,7 @@
 185.132.196.210 xmlrpc;
 185.135.232.124 xmlrpc;
 185.140.160.139 xmlrpc;
+185.140.161.245 xmlrpc;
 185.145.125.216 xmlrpc;
 185.146.74.105 xmlrpc;
 185.15.38.126 xmlrpc;
@@ -2307,6 +2308,7 @@
 94.253.41.205 xmlrpc;
 94.28.139.172 xmlrpc;
 94.29.10.69 xmlrpc;
+94.29.21.102 xmlrpc;
 94.29.22.181 xmlrpc;
 94.29.8.241 xmlrpc;
 94.50.219.97 xmlrpc;
