--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1035,6 +1035,7 @@
 188.225.50.217 xmlrpc;
 188.227.83.130 xmlrpc;
 188.232.26.21 xmlrpc;
+188.232.28.67 xmlrpc;
 188.232.8.156 xmlrpc;
 188.234.13.9 xmlrpc;
 188.235.171.178 xmlrpc;
