--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1051,6 +1051,7 @@
 188.254.110.161 xmlrpc;
 188.254.126.230 xmlrpc;
 188.254.126.236 xmlrpc;
+188.255.22.119 xmlrpc;
 188.255.53.140 xmlrpc;
 188.32.237.199 xmlrpc;
 188.43.205.201 xmlrpc;
@@ -1613,6 +1614,7 @@
 45.132.184.218 xmlrpc;
 45.136.246.124 xmlrpc;
 45.14.244.52 xmlrpc;
+45.143.236.252 xmlrpc;
 45.147.192.184 xmlrpc;
 45.15.112.144 xmlrpc;
 45.15.158.39 xmlrpc;
@@ -1641,6 +1643,7 @@
 45.87.253.30 xmlrpc;
 45.88.149.239 xmlrpc;
 45.89.100.114 xmlrpc;
+45.89.100.115 xmlrpc;
 45.92.124.60 xmlrpc;
 45.94.119.197 xmlrpc;
 45.95.67.177 xmlrpc;
