Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1027,6 +1027,7 @@
 188.19.49.58 xmlrpc;
 188.19.52.210 xmlrpc;
 188.190.218.118 xmlrpc;
+188.190.218.79 xmlrpc;
 188.190.221.107 xmlrpc;
 188.190.221.133 xmlrpc;
 188.191.167.16 xmlrpc;
@@ -1511,6 +1512,7 @@
 37.79.141.169 xmlrpc;
 37.79.142.239 xmlrpc;
 37.79.142.251 xmlrpc;
+37.79.26.186 xmlrpc;
 37.79.8.195 xmlrpc;
 39.101.185.186 xmlrpc;
 39.101.72.35 xmlrpc;
