--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -470,6 +470,7 @@
 143.198.214.102 xmlrpc;
 143.198.87.223 xmlrpc;
 145.249.67.92 xmlrpc;
+145.249.76.8 xmlrpc;
 145.255.8.115 xmlrpc;
 145.255.9.151 xmlrpc;
 145.255.9.38 xmlrpc;
