--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2271,6 +2271,7 @@
 92.53.96.223 xmlrpc;
 92.53.99.196 xmlrpc;
 92.62.57.200 xmlrpc;
+92.62.57.255 xmlrpc;
 92.62.59.27 xmlrpc;
 93.100.165.67 xmlrpc;
 93.100.175.23 xmlrpc;
