--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1822,6 +1822,7 @@
 5.139.231.44 xmlrpc;
 5.140.97.78 xmlrpc;
 5.142.152.106 xmlrpc;
+5.142.3.174 xmlrpc;
 5.144.119.198 xmlrpc;
 5.144.119.92 xmlrpc;
 5.145.253.114 xmlrpc;
@@ -1996,6 +1997,7 @@
 79.164.236.28 xmlrpc;
 79.165.73.73 xmlrpc;
 79.172.69.129 xmlrpc;
+79.173.65.10 xmlrpc;
 79.173.69.143 xmlrpc;
 79.173.87.105 xmlrpc;
 79.174.33.250 xmlrpc;
