Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1136,6 +1136,7 @@
 193.93.194.254 xmlrpc;
 193.93.194.39 xmlrpc;
 194.104.11.84 xmlrpc;
+194.106.196.44 xmlrpc;
 194.146.240.144 xmlrpc;
 194.15.115.212 xmlrpc;
 194.190.1.194 xmlrpc;
