Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -55,6 +55,7 @@
 103.43.188.65 xmlrpc;
 103.84.217.56 xmlrpc;
 103.89.137.56 xmlrpc;
+103.96.129.12 xmlrpc;
 104.248.153.75 xmlrpc;
 104.28.156.208 xmlrpc;
 104.28.156.217 xmlrpc;
