Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1422,6 +1422,7 @@
 31.12.92.159 xmlrpc;
 31.12.92.18 xmlrpc;
 31.12.93.142 xmlrpc;
+31.12.95.186 xmlrpc;
 31.12.95.234 xmlrpc;
 31.129.219.87 xmlrpc;
 31.134.188.232 xmlrpc;
