--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -214,6 +214,7 @@
 116.14.136.60 xmlrpc;
 116.14.176.123 xmlrpc;
 116.15.205.216 xmlrpc;
+116.23.161.86 xmlrpc;
 116.62.155.4 xmlrpc;
 116.62.206.174 xmlrpc;
 116.8.109.54 xmlrpc;
