--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1374,6 +1374,7 @@
 222.73.129.45 xmlrpc;
 222.84.249.11 xmlrpc;
 222.93.165.121 xmlrpc;
+223.113.80.158 xmlrpc;
 223.19.213.228 xmlrpc;
 223.29.253.14 xmlrpc;
 223.29.254.40 xmlrpc;
