--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1504,6 +1504,7 @@
 37.140.192.43 xmlrpc;
 37.140.192.64 xmlrpc;
 37.140.192.75 xmlrpc;
+37.144.95.163 xmlrpc;
 37.146.132.22 xmlrpc;
 37.157.234.254 xmlrpc;
 37.18.38.115 xmlrpc;
