--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1397,6 +1397,7 @@
 2406:da18:f6e:f100:79a7:5756:f22:356e xmlrpc;
 240e:d9:c200:141:776b::cc0 xmlrpc;
 27.128.246.110 xmlrpc;
+27.36.104.46 xmlrpc;
 2a00:1838:37:1c6::38ed xmlrpc;
 2a00:f940:2:1:2:0:1:496d xmlrpc;
 2a02:4780:3:694:0:1960:fb4d:1 xmlrpc;
