Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -542,6 +542,7 @@
 149.50.213.157 xmlrpc;
 149.62.52.77 xmlrpc;
 15.235.140.141 xmlrpc;
+15.235.145.92 xmlrpc;
 15.235.212.111 xmlrpc;
 150.109.16.20 xmlrpc;
 150.158.146.220 xmlrpc;
