--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2103,6 +2103,7 @@
 85.143.173.5 xmlrpc;
 85.174.197.235 xmlrpc;
 85.174.204.118 xmlrpc;
+85.174.205.140 xmlrpc;
 85.174.207.184 xmlrpc;
 85.192.189.7 xmlrpc;
 85.202.225.25 xmlrpc;
