--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1511,6 +1511,8 @@
 37.140.192.75 xmlrpc;
 37.144.95.163 xmlrpc;
 37.146.132.22 xmlrpc;
+37.153.31.245 xmlrpc;
+37.157.234.141 xmlrpc;
 37.157.234.254 xmlrpc;
 37.18.38.115 xmlrpc;
 37.18.38.128 xmlrpc;
