--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1684,6 +1684,7 @@
 46.138.188.134 xmlrpc;
 46.138.42.195 xmlrpc;
 46.138.42.253 xmlrpc;
+46.138.54.22 xmlrpc;
 46.138.56.227 xmlrpc;
 46.146.205.94 xmlrpc;
 46.148.132.183 xmlrpc;
