Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1719,6 +1719,7 @@
 46.242.12.97 xmlrpc;
 46.242.122.6 xmlrpc;
 46.242.14.228 xmlrpc;
+46.242.15.120 xmlrpc;
 46.242.9.108 xmlrpc;
 46.242.9.51 xmlrpc;
 46.243.232.93 xmlrpc;
