--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -142,6 +142,7 @@
 109.62.130.68 xmlrpc;
 109.62.139.50 xmlrpc;
 109.68.210.233 xmlrpc;
+109.68.211.157 xmlrpc;
 109.71.177.165 xmlrpc;
 109.75.207.161 xmlrpc;
 109.94.2.2 xmlrpc;
@@ -1662,6 +1663,7 @@
 45.77.253.118 xmlrpc;
 45.78.22.95 xmlrpc;
 45.81.136.33 xmlrpc;
+45.83.116.35 xmlrpc;
 45.83.119.14 xmlrpc;
 45.83.94.4 xmlrpc;
 45.84.176.120 xmlrpc;
@@ -1898,6 +1900,7 @@
 5.23.51.195 xmlrpc;
 5.252.29.87 xmlrpc;
 5.252.30.31 xmlrpc;
+5.252.31.123 xmlrpc;
 5.252.31.13 xmlrpc;
 5.253.103.128 xmlrpc;
 5.253.103.23 xmlrpc;
