--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2129,6 +2129,7 @@
 85.202.225.25 xmlrpc;
 85.235.52.31 xmlrpc;
 85.239.35.245 xmlrpc;
+85.239.37.162 xmlrpc;
 85.239.38.206 xmlrpc;
 85.249.31.203 xmlrpc;
 85.95.188.147 xmlrpc;
@@ -2324,6 +2325,7 @@
 93.181.208.70 xmlrpc;
 93.185.198.166 xmlrpc;
 93.187.181.83 xmlrpc;
+93.190.231.205 xmlrpc;
 93.80.47.155 xmlrpc;
 93.90.228.118 xmlrpc;
 93.92.200.170 xmlrpc;
