--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -430,6 +430,7 @@
 139.162.21.71 xmlrpc;
 139.162.36.201 xmlrpc;
 139.162.39.171 xmlrpc;
+139.162.39.227 xmlrpc;
 139.162.41.117 xmlrpc;
 139.162.51.17 xmlrpc;
 139.162.60.22 xmlrpc;
