--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -699,6 +699,7 @@
 176.59.115.198 xmlrpc;
 176.59.4.173 xmlrpc;
 176.59.47.31 xmlrpc;
+176.59.56.34 xmlrpc;
 176.74.202.15 xmlrpc;
 176.77.108.83 xmlrpc;
 176.96.255.239 xmlrpc;
