Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1051,6 +1051,7 @@
 188.19.52.210 xmlrpc;
 188.190.218.118 xmlrpc;
 188.190.218.79 xmlrpc;
+188.190.218.95 xmlrpc;
 188.190.221.107 xmlrpc;
 188.190.221.133 xmlrpc;
 188.191.167.16 xmlrpc;
@@ -2484,6 +2485,7 @@
 95.66.236.10 xmlrpc;
 95.68.131.78 xmlrpc;
 95.73.171.35 xmlrpc;
+95.73.175.18 xmlrpc;
 95.73.219.246 xmlrpc;
 95.79.83.142 xmlrpc;
 95.81.216.126 xmlrpc;
